--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,9 @@ REDIS_PORT=6379
 REDIS_PASS=
 
 DISCORD_TOKEN=
+
+# Misc.
+OPTIONS_SPAM_RATE_LIMIT=5
+OPTIONS_LOG_CHANNEL=394194413783613440
+OPTIONS_GUILD_ID=394187766130540555
+OPTIONS_MAX_WARNINGS=3
