--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "BadCop",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "private": true,
-  "description": "",
+  "description": "A fantastic cop",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -23,6 +23,7 @@
     "dotenv": "^4.0.0",
     "ioredis": "^3.2.2",
     "requireindex": "^1.1.0",
-    "uws": "^9.14.0"
+    "uws": "^9.14.0",
+    "wordfilter": "^0.2.6"
   }
 }
