--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "A fantastic cop",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
